Fix match table small on mobile.

--- a/assets/sass/funky_world_cup/_fixture_tables.scss
+++ b/assets/sass/funky_world_cup/_fixture_tables.scss
@@ -31,7 +31,6 @@
   }
 
   td:last-of-type {
-    display: table-cell !important;
     height: 100%;
   }
 
